[package]
name = "tracing-combi-collector"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/KoHcoJlb/tracing-combi-collector"
authors = ["Ihor Stuzhuk"]
keywords = ["tracing", "loki", "victorialogs", "logs"]
license = "GPL-3.0-or-later"
description = """
Tracing Layer that combines structured and human-readable log formatting and sends them into Loki or Victoriametrics
"""

exclude = ["/demo.png"]

[features]
rustls-tls = ["reqwest/rustls"]
default = ["rustls-tls", "zstd"]

[dependencies]
tokio = "1"
eyre = "0.6.12"
flume = "0.12.0"
itertools = "0.14"
derive_more = { version = "2.1.1", features = ["from", "display"] }

tracing = "0.1"
tracing-subscriber = "0.3"

reqwest = { version = "0.13", default-features = false, features = ["query"] }
url = "2"

prost = "0.14"
prost-types = "0.14"
snap = "1"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zstd = { version = "0.13.3", optional = true }

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
eyre = "0.6.12"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
